<resources>
    <string name="app_name">TodoBa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_de_ejemplo">Texto de ejemplo</string>
    <string name="titulo_ubicacion">Ubicación</string>
    <string name="crear_evento">Crear evento</string>
    <string name="marcar_como_completado">Marcar como completado</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="ingresa_contrasena">Ingresa tu contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="todoba">TodoBa</string>
    <string name="organiza_tu_vida_ahora">¡Organiza tu vida ahora!</string>
    <string name="selecciona_un_color_para_esta_categoria">Selecciona un color para esta categoria:</string>
    <string name="crear_categoria">Crear categoria</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="hora">Hora</string>
    <string name="fecha_limite">Fecha límite</string>
    <string name="fecha_creacion">Fecha de creación</string>
    <string name="categoria">Categoría</string>
    <string name="comentarios">Comentarios</string>
    <string name="tiempo_horario">Tiempo horario</string>
    <string name="clima">Clima</string>
    <string name="hint_password">Ingresa tu contraseña</string>
    <string name="hint_email">Ingresa tu correo</string>
    <string name="hint_category">Ingresa el nombre de la categoria</string>
    <string name="hint_event_name">Ingresa el nombre del evento</string>
    <string name="hint_event_date">Selecciona la fecha limite del evento:</string>
    <string name="Anadir_evento">Añadir un evento</string>
    <string name="anadir_categoria">Añadir una categoria</string>
    <string name="selecciona_categoria">Selecciona la categoria del evento</string>
    <string name="lugar_evento">Indica el lugar para el evento</string>
    <string name="lugar_del_evento">Lugar del evento</string>
    <string name="ingresa_hora_limite__evento">Ingresa la hora limite del evento</string>
    <string name="comentario">Comentario</string>
    <string name="ingresa_un_comentario">Ingresa un comentario</string>
    <string name="required">Requerido</string>
    <string name="min_caracteres">Mínimo 6 caracteres</string>
    <string name="nombre_categoria">Nombre de la categoria</string>
    <string name="sin_datos">Sin datos por ahora...</string>
</resources>