<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_loginfragment_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/ingresa_contrasena"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorRed"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_loginfragment_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_loginfragment_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/ingresa_correo"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="55sp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/teal_700"
        android:background="@drawable/rectangle_buttton"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout_loginfragment_password"
        app:layout_constraintStart_toStartOf="@+id/inputLayout_loginfragment_password"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_loginfragment_password" />
    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bienvenido"
        android:textSize="@dimen/large_textsize"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>