<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:visibility="visible"
    tools:context=".ui.fragments.CreateCategoryFragment">

    <TextView
        android:id="@+id/textView_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/anadir_categoria"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/mid_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/hint_category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/small_textsize"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout_createCategoryFragment_nombreEvento"
        app:layout_constraintStart_toStartOf="@+id/inputLayout_createCategoryFragment_nombreEvento"
        app:layout_constraintTop_toBottomOf="@+id/textView_Titulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_createCategoryFragment_nombreEvento"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/nombre_categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Categoria">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputCategoria"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_createCategoryFragment_crearCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/crear_categoria"
        android:background="@drawable/rectangle_buttton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>