<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.DetailsEventFragment"
    tools:visibility="visible">


    <TextView
        android:id="@+id/textView_TituloNombreEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:text="@string/nombre_del_evento"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_TituloUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:text="@string/titulo_ubicacion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombreEvento" />

    <TextView
        android:id="@+id/textView_TituloHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:text="@string/hora"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ubicacion" />

    <TextView
        android:id="@+id/textView_TituloFechaLimite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:text="@string/fecha_limite"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_hora" />

    <TextView
        android:id="@+id/textView_TituloCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:text="@string/categoria"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_FechaLimite" />

    <TextView
        android:id="@+id/textView_TituloComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:text="@string/comentarios"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Categoria" />

    <TextView
        android:id="@+id/textView_nombreEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:text="@string/texto_de_ejemplo"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_TituloNombreEvento"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ubicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/texto_de_ejemplo"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_TituloUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombreEvento" />

    <TextView
        android:id="@+id/textView_hora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:text="@string/texto_de_ejemplo"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_TituloHora"
        app:layout_constraintTop_toBottomOf="@+id/textView_ubicacion" />

    <TextView
        android:id="@+id/textView_FechaLimite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:text="@string/texto_de_ejemplo"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_TituloFechaLimite"
        app:layout_constraintTop_toBottomOf="@+id/textView_hora" />

    <TextView
        android:id="@+id/textView_Categoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:text="@string/texto_de_ejemplo"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_TituloCategoria"
        app:layout_constraintTop_toBottomOf="@+id/textView_FechaLimite" />

    <TextView
        android:id="@+id/textView_Comentarios"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mid"
        android:text="@string/texto_de_ejemplo"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_TituloComentario"
        app:layout_constraintTop_toBottomOf="@+id/textView_Categoria" />

    <Button
        android:id="@+id/button_fragmentDetails_MarcarCompletado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="@drawable/rectangle_buttton"
        android:text="@string/marcar_como_completado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_fragmentDetails_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mid"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>