<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:visibility="visible"
    tools:context=".ui.fragments.CreateAccountFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_createAccountFragment_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_createAccountFragment_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_createAccountFragment_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="65dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="55sp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/crear_cuenta"
        android:background="@drawable/rectangle_buttton"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout_createAccountFragment_password"
        app:layout_constraintStart_toStartOf="@+id/inputLayout_createAccountFragment_password"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_createAccountFragment_password" />
    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/crea_tu_cuenta"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout_createAccountFragment_password"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/inputLayout_createAccountFragment_password"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_createAccountFragment_password" />


</androidx.constraintlayout.widget.ConstraintLayout>