<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ui.fragments.WelcomeFragment"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@mipmap/ic_todoba_new_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginVertical="@dimen/margin_mid"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:background="@drawable/rectangle_buttton"
        android:backgroundTint="@color/black"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/button_newAccount"
        app:layout_constraintStart_toStartOf="@+id/button_newAccount"
        app:layout_constraintTop_toBottomOf="@+id/button_newAccount" />

    <Button
        android:id="@+id/button_newAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginVertical="@dimen/margin_mid"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:background="@drawable/rectangle_buttton"
        android:text="@string/crea_tu_cuenta"
        app:layout_constraintEnd_toEndOf="@+id/WelcomeTextView"
        app:layout_constraintStart_toStartOf="@+id/WelcomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeTextView" />

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/organiza_tu_vida_ahora"
        android:textColor="@color/black"
        android:textSize="@dimen/mid_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@mipmap/ic_phones3_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>